# Terraform

./: Cargo.toml  README.md
src/: main.rs
src/app/: e2e_tests.rs  graph_builder.rs  mod.rs  state.rs  tree.rs
src/fixtures/: expected_edges.txt
src/fixtures/sample_crate/: main.rs  shapes.rs
src/graph/: cursor.rs  entity.rs  mod.rs  navigator.rs  smoke_tests.rs  tests.rs  tree.rs
src/parser/: mod.rs
src/ui/: events.rs  mod.rs  mod_impl.rs
