[package]
name = "terraform-tui"
version = "0.1.0"
edition = "2024"
description = "Terminal-based hierarchical code viewer and editor"
license = "MIT"

[[bin]]
name = "terraform"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
